--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <div class="services">
 	<div class="container">
 	<h2>Our Main Services</h2>
-    <p>We are Reputed Welder Company Deals in Fabrication of Iron, Steel & Aluminium for Domestic & Industrial Purpose</p>
+    <p>We are reputed Welder Company Deals in Fabrication of Iron, Steel & Aluminium for Domestic & Industrial Purpose</p>
     	
         <div class="row">
         	<div class="col-md-9">
